Name:                reactive-banana-sdl
Version:             0.1.0
Synopsis:            Reactive Banana bindings for SDL
-- Description:
License:             GPL-3
License-file:        LICENSE
Author:              R. Kyle Murphy
Maintainer:          orclev@gmail.com
Category:            Graphics
Homepage:            https://github.com/orclev/reactive-banana-sdl
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:
Cabal-version:       >=1.2


Library
  hs-source-dirs:  src
  Exposed-modules:  Reactive.Banana.SDL,
                    Reactive.Banana.SDL.Types,
                    Reactive.Banana.SDL.Util

  Build-depends:    base >= 4.2 && < 5,
                    reactive-banana >= 0.5.0.0 && < 0.6,
                    SDL >= 0.6.3 && < 0.7

  -- Modules not exported by this package.
  -- Other-modules: