Name:                reactive-banana-sdl
Version:             0.1.0
Synopsis:            Reactive Banana bindings for SDL
Description:         Provides bindings and convenience functions for using reactive banana with SDL.
License:             GPL-3
License-file:        LICENSE
Author:              R. Kyle Murphy
Maintainer:          orclev@gmail.com
Category:            Graphics
Homepage:            https://github.com/orclev/reactive-banana-sdl
Build-type:          Simple

-- TODO
-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:
Cabal-version:       >=1.6


Source-Repository head
    Type:            git
    Location:        https://github.com/orclev/reactive-banana-sdl


Library
  hs-source-dirs:  src
  Exposed-modules:  Reactive.Banana.SDL,
                    Reactive.Banana.SDL.Types,
                    Reactive.Banana.SDL.Util,
                    Reactive.Banana.SDL.Graphics,
                    Reactive.Banana.SDL.Graphics.Types,
                    Reactive.Banana.SDL.Graphics.Util

  Build-depends:    base >= 4.2 && < 5,
                    reactive-banana >= 0.5.0.0 && < 0.6,
                    SDL >= 0.6.3 && < 0.7,
                    SDL-ttf >= 0.6.1 && < 0.7,
                    data-lens >= 2.0.4 && < 2.1,
                    data-lens-template >= 2.1.3 && < 2.2